--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   	<head>
     	<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     	<title>Modalize - Plugin Example</title>
     	<link type="text/css" rel="stylesheet" href="css/style.css">
     	<script type="text/javascript" src="libs/jquery-3.1.1.min.js"></script>
